# Plexlist

./: .gitignore  Dockerfile  README.md  app_state.py  gui.py  logging_config.py  logging_improvement_plan.md  logic.py  main.py  playlist_importer.py  plex_config.json  pyproject.toml
api/: config.py  importer.py  playlist.py  plex.py
web/: index.html
web/static/: script.js  style.css
