[project]
name = "plex2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "plexapi>=4.17.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "thefuzz>=0.22.1",
    "uvicorn>=0.35.0",
]
